# kira

./: .gitignore  Cargo.toml  build.rs  flake.nix  rust-toolchain  rustfmt.toml  test.kira
.github/workflows/: nix-github-actions.yml
assets/test/: test_prompt.json  test_workflow_simple.json
src/: api.rs  backend.rs  command_palette.rs  ctrl.rs  main.rs  model.rs  node_view.rs  pres.rs  utils.rs
src/ctrl/: command_palette.rs  graph.rs  menu.rs  node_view.rs  tabs.rs
src/ctrl/graph/: floating.rs  links.rs  nodes.rs
src/ctrl/menu/: darwin.rs
src/ctrl/node_view/: links.rs  nodes.rs
src/model/: backend.rs  project.rs  tabs.rs
src/model/backend/: conv.rs  node.rs  websocket.rs  workflow.rs
src/model/tabs/: project.rs
src/model/tabs/project/: graph.rs
src/pres/: command_palette.rs  node_view.rs
ui/: app.slint  appwindow.slint  command_palette.slint  graph.slint  menu.slint  node_view.slint  tabs.slint  theme.slint  timeline.slint
ui/core_widgets/: combobox.slint  lineedit-base.slint  textedit-base.slint
ui/graph/: floating.slint  inputs.slint  links.slint  nodes.slint  state.slint
ui/node_view/: floating.slint  links.slint  nodes.slint  state.slint
workflows/: MotionBrushLCMIPA.json
