[package]
name = "slint-graph"
version = "0.1.0"
authors = ["IGI-111 <igi-111@protonmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-dialog = "0.7.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
simsearch = "0.2.5"
slint = { version = "1.5.1", features = [ "std", "renderer-femtovg", "renderer-software", "accessibility", "compat-1-2", "backend-winit" ], default-features = false }

[build-dependencies]
slint-build = "1.5.1"
